# aur

./:    #PKGBUILD#  $updpkgsums  '  *updpkgsums  ..SRCINFO.kate-swp  ..SRCINFO.un~  .AURINFO  .BUILDINFO  .CHANGELOG  .Changelog  .FILELIST  .INSTALL  .Install  .MTREE  .NVCHECKER  .PKGBUILD.kate-swp  .PKGBUILD.swo  .PKGBUILD.swp  .PKGBUILD.template  .PKGBUILD.un~  .PKGINFO  .SCRINFO  .SRCFINFO  .SRCINFO  .SRCINFO.bak  .SRCINFO.license  .SRCINFO.orig  .SRCINFO.rej  .SRCINFO.sig  .SRCINFO.swp  .SRCINFO.template  .SRCINFO.tpl  .SRCINFO_BACKUP_13017  .SRCINFO_BASE_13017  .SRCINFO_LOCAL_13017  .SRCINFO_REMOTE_13017  .SRCINFOa  .SRCINFOb  .SRCINFO~  (+53200 more)
keys/pgp/: 3ABCBB9E8C2DE5D8D3264CD2D92FC471693D9BB7.asc  3D115DD206D92A0656C827BC8B686E3C22E4C2FA.asc  4BA1F928CBA7CA219A14741B24FB14CFDD5D0319.asc  5D2FB320B825D93904D205193938F96BDF50FEA5.asc  5DE3E0509C47EA3CF04A42D34AEE18F83AFDEB23.asc  63CDA1E5D3FC22B998D20DD6327F26951A015CC4.asc  647F28654894E3BD457199BE38DBBDC86092693E.asc  66D0387DB85D320F8408166DB175CFA98F192AF2.asc  73D46C3667461E4BD93972495D6D47DFDB899F46.asc  83BC8889351B5DEBBB68416EB8AC08600F108CDF.asc  92C2F0AEFE73208E46BFF3DE2B25868E75A1A953.asc  9B9F19015CDA693BB3130A5094D4F1ECB125FB78.asc  A2FF3A36AAA56654109064AB19802F8B0D70FC30.asc  AE1A7BA4EFFF9A9987E1474C4BACCAB36E7FE9A1.asc  B0C64D14301CC6EFAEDF60E4E4B71D5EEC39C284.asc  BE5C23209ACDDACEB20DB0A28C8189F1988C2166.asc  E6F6848A1B95EE313CF5B7EE95FF633C90A8F025.asc  ED1CA1E7A6F80E22E5CB2DA84ACE106615754614.asc  F5B9F52ED90920D2520376A2C24A0F637E364856.asc
