# Copyright 2010-2021, Google Inc.
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#
#     * Redistributions of source code must retain the above copyright
# notice, this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above
# copyright notice, this list of conditions and the following disclaimer
# in the documentation and/or other materials provided with the
# distribution.
#     * Neither the name of Google Inc. nor the names of its
# contributors may be used to endorse or promote products derived from
# this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

# Visibility:  please choose a more appropriate default for the package,
# and update any rules that should be different.

load(
    "//:build_defs.bzl",
    "mozc_cc_binary",
    "mozc_cc_library",
)

mozc_cc_library(
    name = "uim_header",
    deps =  ["@uim//:uim"],
)

mozc_cc_library(
    name = "uim_mozc_key_lib",
    linkstatic = True,
    srcs = [
        "key_translator.cc",
    ],
    hdrs = [
        "key_translator.h",
    ],
    deps = [
        ":uim_header",
        "//base:port",
        "//base:vlog",
        "//base:util",
        "//client",
        "//protocol:commands_cc_proto",
    ],
)


cc_library(
    name = "uim_mozc_lib",
    srcs = ["mozc.cc"],
    deps = [
        ":uim_header",
        ":uim_mozc_key_lib",
        "//base:init_mozc",
        "//base:util",
        "//base:version",
        "//client",
        "//protocol:commands_cc_proto",
        "@uim//:uim",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_shared_library(
    name = "uim-mozc",
    roots = ["uim_mozc_lib"],
)
