[package]
name = "dailyverse"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "dailyverse"
path = "main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
html-escape = "0.2.13"
