custom_toolchain="//build/toolchain/linux/unbundle:default"
host_toolchain="//build/toolchain/linux/unbundle:default"
is_official_build=true
ffmpeg_branding="Chrome"
proprietary_codecs=true
rtc_use_pipewire=true
link_pulseaudio=true
use_gnome_keyring=false
use_sysroot=false
linux_use_bundled_binutils=false
use_custom_libcxx=false
enable_swiftshader=false
use_vaapi=true
fatal_linker_warnings=false
is_clang=true
use_kerberos=false
use_libjpeg_turbo=true
use_pulseaudio=true
use_system_freetype=true
use_system_harfbuzz=true
use_system_lcms2=true
use_system_libjpeg=true
use_system_zlib=true
icu_use_data_file=false
# symbol_level = 2 causes OBS to run out of space
symbol_level=0
blink_symbol_level=0
#exclude_unwind_tables=false
